Lista de Tarefas

--- a/Lista de Tarefas/index.html
+++ b/Lista de Tarefas/index.html
@@ -14,8 +14,12 @@
     <section class="container">
         <h1>Lista de Tarefas</h1>
         <p>
+        
             <input type="text" class="input-tarefa">
+            <input type="number" class="input-number">
             <button class="btn-tarefa" title="Adicionar Tarefas">Adicionar</button>
+            <div class="result"></div>
+            
         </p>
 
 
